--- a/builder2.html
+++ b/builder2.html
@@ -115,6 +115,17 @@
       isOnGround = false;
     });
 
+    // Camera rotation (mimicking Minecraft Pocket Edition)
+    let cameraRotation = { x: 0, y: 0 };
+    const rotationSpeed = 0.002;
+    window.addEventListener('pointermove', (event) => {
+      if (event.buttons === 1) {
+        cameraRotation.x -= event.movementY * rotationSpeed;
+        cameraRotation.y -= event.movementX * rotationSpeed;
+        camera.rotation.set(cameraRotation.x, cameraRotation.y, 0);
+      }
+    });
+
     // Player movement
     function updateMovement() {
       const speed = 0.1;
@@ -191,31 +202,20 @@
       }
     }
 
-    // Day-night cycle logic (slowed down)
-    let time = 0;
-    const dayLength = 20000; // Duration of a full day in milliseconds (slowed down)
-
-    function updateDayNightCycle() {
-      time += 1 / dayLength; // Slower time increment
-      if (time > 1) time = 0; // Reset after one cycle
-
-      directionalLight.intensity = Math.max(0, Math.sin(time * Math.PI * 2));
-    }
-
-    // Animation loop
+    // Main animation loop
     function animate() {
       updateMovement();
       updateTerrain();
-      updateDayNightCycle();
       spawnMobs();
       renderer.render(scene, camera);
       requestAnimationFrame(animate);
     }
 
-    // Initializations
+    // Initial camera position and start animation
     camera.position.set(0, 5, 10);
     camera.lookAt(0, 5, 0);
     animate();
+
   </script>
 </body>
 </html>
